# rk3588-vision-pipeline

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EDID_DESIGN.md  RKNN_BACKEND.md
include/vision/: capture.hpp  control.hpp  frame.hpp  hdmi_output.hpp  inference.hpp
src/: control_pipeline.cpp  hdmi_drm_output.cpp  inference_pipeline.cpp  main.cpp  v4l2_capture.cpp
tests/: inference_pipeline_test.cpp
